[package]
name = "centaurus"
version = "0.1.0"
authors = ["mischief901 <alexmisch901@gmail.com>"]
edition = "2018"

[lib]
name = "centaurus"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git="https://github.com/rusterlium/rustler.git", branch="master", features = ["derive"] }
rustler_codegen = { version = "0.21.0" }
serde = { version = "1.0.104", features = ["derive"] }
lazy_static = "1.0"
err-derive = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
quinn = "0.5.3"
quinn-proto = "0.5.2"
futures = "0.3.1"

[patch.crates-io]
rustler_codegen = { git="https://github.com/rusterlium/rustler.git", branch="master" }