[package]
name = "centaurus"
version = "0.1.0"
authors = ["mischief901 <alexmisch901@gmail.com>"]
edition = "2018"

[lib]
name = "centaurus"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0"
err-derive = "0.2.2"
futures = "0.3.1"
quinn = "0.6.0"
rustler = { version = "0.22.0-rc.0", features = ["derive"] }
rustls = { version = "0.17", features = ["quic"] }
serde = { version = "1.0.104", features = ["derive"] }
stable_deref_trait = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
webpki = { version = "0.21" }
