[package]
name = "centaurus"
version = "0.1.0"
authors = ["mischief901 <alexmisch901@gmail.com>"]
edition = "2018"

[lib]
name = "centaurus"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
either = "1.5"
err-derive = "0.2"
fern = "0.6.0"
futures = "0.3"
log = "0.4.8"
quinn = "0.6"
rcgen = "0.8"
rustler = { version = "0.22.0-rc.0", features = ["derive"] }
rustls = { version = "0.17", features = ["quic"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "0.2.21", features = ["full"] }
webpki = { version = "0.21" }
