[package]
name = "centaurus_common"
version = "0.1.0"
authors = ["mischief901 <alexmisch901@gmail.com>"]
edition = "2018"

[lib]
name = "centaurus_common"
path = "src/lib.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.5.2"